# Fifteen

./: .gitignore  CMakeLists.txt
scripts/: run.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/fifteen/: CMakeLists.txt  game.cpp  game.hpp  heuristics.cpp  heuristics.hpp  main.cpp
src/fifteen_lib/: CMakeLists.txt  checked_fifteen.cpp  checked_fifteen.hpp  fifteen.cpp  fifteen.hpp  fifteen_board.hpp  game.cpp  game.hpp  heuristics.cpp  heuristics.hpp
tests/: CMakeLists.txt  fifteen_test.cpp  heuristics_test.cpp
